--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -116,6 +116,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="guest_user" />
+    <string name="seleziona_l_ambientazione_di_gioco">Seleziona l\'ambientazione di gioco</string>
 
 
 </resources>
