--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -77,6 +77,9 @@
     <string name="select_user_type">Select the user type</string>
     <string name="home_page_bambino">Home Page Child</string>
     <string name="home_page_genitore">Home Page Parent</string>
+    <string name="selezione_id_logopedista">Speech therapist id selection</string>
+    <string name="selezione_bambino">Child selection</string>
+    <string name="correzione_esercizi">Exercise correction</string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
@@ -117,6 +120,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="guest_user" />
     <string name="seleziona_l_ambientazione_di_gioco">Seleziona l\'ambientazione di gioco</string>
+    <string name="selezione_id_logopedista">Selezione id logopedista</string>
 
 
 </resources>
